tests/baselines/reference/symbolProperty55.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty55.ts(9,9): error TS2538: Type 'symbol' cannot be used as an index type.


==== tests/cases/conformance/es6/Symbols/symbolProperty55.ts (1 errors) ====
    var obj = {
        [Symbol.iterator]: 0
    };
    
    module M {
        var Symbol: SymbolConstructor;
        // The following should be of type 'any'. This is because even though obj has a property keyed by Symbol.iterator,
        // the key passed in here is the *wrong* Symbol.iterator. It is not the iterator property of the global Symbol.
        obj[Symbol.iterator];
            ~~~~~~~~~~~~~~~
!!! error TS2538: Type 'symbol' cannot be used as an index type.
    }